2010-11-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Use ‘gr_revno’ more.

	Regression introduced 2010-05-08,
	"Add abstraction: delta_from_ref".
	* ci.c (addbranch): Take 4th arg TP_DELTAS; use ‘gr_revno’.
	(addelta): Update calls to ‘addbranch’.
	(main): Use ‘gr_revno’ instead of ‘delta_from_ref’.
	* rcs.c (setlock): Take arg TP_DELTAS; use ‘gr_revno’.
	(dolocks): Likewise; update calls to ‘setlock’.
	(domessages, rcs_setstate): Likewise.
	(main): Update calls to ‘dolocks’, ‘domessages’, ‘rcs_setstate’.

2010-11-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Incorporate ‘DELNUMFORM’ into unique use.

	* rcsgen.c (rcsgen.c): Use string directly for revno, "log".
	* base.h (DELNUMFORM): Delete #define.

2010-11-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	ci, rcs: Make MSG in ‘-m...MSG’ optional.

	* rcsutil.c (set_empty_log_message): New func.
	* base.h (set_empty_log_message): New func decl.
	* ci.c (getlogmsg, main): Use ‘set_empty_log_message’.
	* rcs.c (getmessage): Likewise.

2010-11-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Output leading '@' for "rcs -m" log in RCS file.

	Omission from 2010-05-24, "Rewrite parsing".
	* rcs.c (scanlogtext): When replacing
	log text from "rcs -m", output leading '@'.

2010-11-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘oom’ more.

	* b-divvy.c (oom): Make func not static.
	* b-divvy.h (oom): New func decl.
	* rcsedit.c (okalloc): Use ‘oom’.

2010-11-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Fix typo: Mention rcsdiff ‘-B’ once only.

	* rcsdiff.c: Mention ‘-B’ once only in help text.
	Reported by Keith Thompson.

2010-11-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 5.7.94

2010-11-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Include extra \n in RCS file to fully emulate RCS 5.7.

	* rcsgen.c (putadmin): Output trailing newline.

2010-11-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Revert symbolic names ordering to be compatible with RCS 5.7.
